syntax = "proto3";

package api;
option go_package = "github.com/feast-dev/feast/backend/api/go_client";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
  // Use bearer token for authorizing access to project service.
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
};

service ProjectService {
  rpc CreateProject (CreateProjectRequest) returns (Project) {
    option (google.api.http) = {
      post: "/CreateProject",
      body: "project"
    };
  }

  rpc GetProject (GetProjectRequest) returns (Project) {
    option (google.api.http) = {
      get: "/GetProject"
    };
  }

  rpc UpdateProject (UpdateProjectRequest) returns (Project) {
    option (google.api.http) = {
      post: "/UpdateProject",
      body: "project"
    };
  }

  rpc DeleteProject (DeleteProjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/DeleteProject"
    };
  }
}

message CreateProjectRequest {
  Project project = 1;
}

message GetProjectRequest {
  string project = 1;
}

message UpdateProjectRequest {
  Project project = 1;
}

message DeleteProjectRequest {
  string project = 1;
}

message Project {
  // Name of Feast project.
  string name = 1;

  string registry_schema_version = 2;
  
  string version_id = 3;

  // Last update time of the project.
  google.protobuf.Timestamp last_updated = 4;
}
